fix: webkit overflow scrolling

--- a/src/app/shared/ui/swipe-options/swipe-options.component.sass
+++ b/src/app/shared/ui/swipe-options/swipe-options.component.sass
@@ -3,6 +3,7 @@
   overflow-x: scroll
   -ms-overflow-style: none
   scrollbar-width: none
+  -webkit-overflow-scrolling: touch
   &::-webkit-scrollbar
     display: none
 
